# todo-cli

./: .gitignore  README.md  cli.py  pyproject.toml  setup.cfg  todo.py
.github/workflows/: publish.yml
scripts/: publish_local.ps1  publish_local.sh
tests/: test_todo.py
todo_cli/: cli.py  todo.py
todo_cli.egg-info/: PKG-INFO  SOURCES.txt
todo_cli_scolhoun.egg-info/: PKG-INFO  SOURCES.txt
